clusters/cluster0/kubernetes/apps/media/ombi/app/ombi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ombi
  name: ombi
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
        - image: lscr.io/linuxserver/ombi:development
          imagePullPolicy: Always
          name: ombi
          ports:
          - name: ombi-port
            containerPort: 3579
            protocol: TCP
          volumeMounts:
          - name: ombi-config
            mountPath: /config
          resources:
            requests:
              memory: 1Gi
              cpu: 150m
            limits:
              memory: 1Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: "ombi-config-ceph"
  selector:
    matchLabels:
      app: ombi
