clusters/cluster0/kubernetes/apps/media/ombi/app/ombi-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ombi
  namespace: media
spec:
  hostnames:
  - ombi.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: ombi-service
      port: 3579
    matches:
    - path:
        type: PathPrefix
        value: /
